# MyTemplate

./: .gitignore  .vimspector.json  CMakeLists.txt  README.md  clean.sh  cmake_install.cmake  debug_build.sh  debug_debug.sh  debug_run.sh  release_build.sh  release_run.sh
.cache/clangd/index/: main.cc.75EA18E3C811EE3B.idx
3rd_party_licenses/: GLFW3.txt  Vulkan.txt  algorithms.txt
dat/: TODO.txt
dat/shaders/: compile.sh  test.frag  test.frag.spv  test.vert  test.vert.spv  test1.frag  test1.vert  test1.vert.spv  test2.frag  test2.frag.spv  test2.vert  test2.vert.spv
doc/: TODO.md
include/stb/: image.h
src/: ACTUAL_MAIN.cc  info.hh.in  main.cc
src/MyTemplate/: main.cpp
src/MyTemplate/Common/: aliases.hpp  utility.hpp
src/MyTemplate/Renderer/: GlfwInstance.cpp  GlfwInstance.hpp  Pipeline.cpp  Pipeline.hpp  Primitives.hpp  Renderer.cpp  Renderer.hpp  Swapchain.cpp  Swapchain.hpp  Texture.hpp  VkInstance.cpp  VkInstance.hpp  Window.cpp  Window.hpp  common.hpp
